--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
             </p>
             <p>
                 <a href="./aulas/aula10/ex008.html"
-                    >Aula 10 - Ex008 - Eventos ao DOM - Parte 02</a
+                    >Aula 10 - Ex008 - Eventos no DOM - Parte 02</a
                 >
             </p>
             <p>
