--- a/aulas/aula06/ex004.html
+++ b/aulas/aula06/ex004.html
@@ -15,27 +15,27 @@
             <h1>Atributos em Strings e Numbers - Aula 06 - Ex004</h1>
             <p><a href="../../index.html">Voltar para HOME</a></p>
             <hr />
-            <h2>Trabalhando com Strings</h2>
+            <h2>Trabalhando com Strings and Numbers</h2>
             <p>
                 ATRIBUTOS DE STRING<br />
                 <strong>s.length</strong> diz quantos caracteres tem uma
-                string<br />
+                string.<br />
                 <strong>s.toUpperCase()</strong> coloca a string para caixa
-                alta<br />
+                alta.<br />
                 <strong>s.toLowerCase()</strong> coloca a string em letras
-                minúsculas<br />
+                minúsculas.<br />
+                <strong>
+                    n.toLocaleString('pt-BR', {style: 'currency', currency:
+                    'BRL'})
+                </strong>
+                colocar o número com cifrão em Reais BRL. <br />
             </p>
             <p>
                 ATRIBUTOS DE NUMBERS<br />
                 <strong>n.toFixed(n)</strong> diz quantas casas decimais tem um
-                número<br />
+                número.<br />
                 <strong>n.replace('.',',')</strong> troca o ponto pela
-                vírgula<br />
-                <strong
-                    >n.toLocaleString('pt-BR', {style: 'currency', currency:
-                    'BRL'})</strong
-                >
-                colocar o número com cifrão em Reais BRL <br />
+                vírgula.<br />
             </p>
             <div id="nome">
                 <script>
