--- a/aulas/aula07/ex005.html
+++ b/aulas/aula07/ex005.html
@@ -68,7 +68,7 @@
                 se auto atribuirmos x = x + 1, x agora recebe o valor de 6, mas
                 podemos simplesmente simplificar incrementando o operador e
                 dizer assim var x = 5, onde x recebe 5, incrementando podemos
-                dizes x++, agora x recebe ele mesmo somado de forma incremental
+                dizer x++, agora x recebe ele mesmo somado de forma incremental
                 e então x recebe o valor de 6.<br /><strong>Nota:</strong>
                 Existe, também, o pré incremento onde pode estabelecer var x = 5
                 e passar o pré incremento ++x e então x recebe agora o valor de
