--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
             </p>
             <p>
                 <a href="./aulas/aula06/ex004.html"
-                    >Aula 06 - Ex004 - Strings</a
+                    >Aula 06 - Ex004 - Strings and Numbers</a
                 >
             </p>
             <p>
