--- a/index.html
+++ b/index.html
@@ -91,6 +91,11 @@
                     >Aula 11 - Ex009 - Condições - Parte 01</a
                 >
             </p>
+            <p>
+                <a href="./aulas/aula12/ex010.html"
+                    >Aula 12 - Ex010 - Condições - Parte 02</a
+                >
+            </p>
             <h2>Exercícios em JavaScript</h2>
             <p><a href="">Aguardando Novos Exercícios</a></p>
             <h2>Desafios em JavaScript</h2>
