--- a/aulas/aula12/ex010.html
+++ b/aulas/aula12/ex010.html
@@ -23,9 +23,7 @@
             <footer>
                 <p>
                     Estudos em HTML5, CSS3 E JAVASCRIPT por
-                    <a href="https://marceloicampos.com/about" target="_blank"
-                        >Marcelo Ildefonso Campos</a
-                    >
+                    <a href="https://marceloicampos.com/about" target="_blank">Marcelo Ildefonso Campos</a>
                 </p>
             </footer>
         </div>
