--- a/aulas/aula12/ex010.html
+++ b/aulas/aula12/ex010.html
@@ -15,8 +15,16 @@
             <h1>Condições - Parte 02 - Aula 12 - Ex 010</h1>
             <p><a href="../../index.html">Voltar para HOME</a></p>
             <hr />
-            <h2>Título Exercício</h2>
-            <p>Parágrafo</p>
+            <h2>Condições Aninhadas e Múltiplas</h2>
+            <p>IF, ELSE IF, ElSE</p>
+            <input type="number" name="age" id="age" placeholder="digite sua idade" />
+            <input type="submit" value="Enviar" onclick="votar()" />
+            <div id="ageMark"></div>
+            <div id="ageMessage"></div>
+            <hr />
+            <div id="agora">aa</div>
+            <div id="agoraMensagem">mm</div>
+            <div id="week"></div>
         </main>
         <div class="foot">
             <hr />
