--- a/index.html
+++ b/index.html
@@ -97,7 +97,11 @@
                 >
             </p>
             <h2>Exercícios em JavaScript</h2>
-            <p><a href="">Aguardando Novos Exercícios</a></p>
+            <p>
+                <a href="./aulas/ex001/"
+                    >Aula Prática 001</a
+                >
+            </p>
             <h2>Desafios em JavaScript</h2>
             <p><a href="">Aguardando Novos Desafios</a></p>
         </main>
